# taxonsk

./: .gitignore  Makefile  README.md  api.http  llm.md  llm.py  main.py  pyproject.toml
alembic/: env.py
core/: config.py  handlers.py  logger.py  router.py  types.py
core/features/dispatch/: __init__.py  agent.py
core/features/tasks/: models.py  repository.py  router.py  scheme.py  service.py
core/features/tasks_audit/: models.py  repository.py  router.py  service.py  table.py
core/features/tasks_chat/: models.py  repository.py  router.py  scheme.py  service.py
core/features/tasks_history/: models.py  repository.py  router.py  service.py  table.py
core/features/tasks_metadata/: models.py  repository.py  router.py  scheme.py  service.py
core/shared/: dependencies.py  enums.py  exceptions.py  globals.py
core/shared/base/: model.py  repository.py  scheme.py
core/shared/components/: __init__.py  broker.py  cacher.py
core/shared/database/: connection.py  redis.py  scheme.py  session.py
core/shared/middleware/: __init__.py  context.py  monitor.py
core/shared/models/: http.py
core/shared/util/: func.py
